added js file and extra color text

--- a/main.css
+++ b/main.css
@@ -28,6 +28,7 @@ body{background:hotpink; color:burlywood; }
         font-family: fantasy;
         text-align: center}
 #lastword {font-family:cursive; color: white}
+#fruit {color:red}
 .headers {color: whitesmoke;
             text-align: right;
              font-size: 12px}
